--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Program Analysis and Synthesis, Spring 2016, ETH Zurich
 
 ## Project: Deep Learning for Programs
-
 We provide two scripts 'suggest.sh' and 'extract_histories.sh' that will be used to test your solution. You should update both scripts by following the instructions provided inside them and include them in your submission.
+
+I just followed the basic project structure like downloaded from the PA site. I just added the .py files. Depending on the complexitiy we reach, we may introduce subfolders for each of the two subtasks HistoryExtraction and Suggestion.
 
