Rearranged Project structure to include Prediction part.

--- a/README
+++ b/README
@@ -1,66 +1,34 @@
 Program Analysis and Synthesis, Spring 2016, ETH Zurich
+
+## Project: Deep Learning for Programs
 We provide two scripts 'suggest.sh' and 'extract_histories.sh' that will be used to test your solution. You should update both scripts by following the instructions provided inside them and include them in your submission.
 
-___________
-How to run the programs:
-extract_histories.sh:       If the file to predict has ? in the tree, you need to pass true as a third argument.
+
+
+## Repository Overview:
+Folder HistoryExtraction: 	Contains all code and the testcases given for history extraction.
+Folder Prediction:		All code concerning the deep learning and code prediction.
 
 
 
-
-___________
-IN THE FOLLOWING I DESCRIBE THE COMPONENTS OF THE PROJECT:
-
-A) The provided sh files:
-extract_histories.sh
-suggest.sh
-
-B) Preprocessing and Driver for generating the testhistories out of the huge files
-astDevider.py:  Splits the huge ast file into smaller ones, one per project
-astFeeder.py:   Runs the historyExtraction for each of the groups created by astDevider.py
-
-C) Python code for history extraction:
-extract_histories.py:       The main history extraction algorithm analysing the ast
-State.py:                   Class representing the program state
-HistoryCollection.py:       The class where the histories are collected and which finally renders the histories
-CustomExceptions.py:        Only some ExceptionClasses to allow better error handling
-
-D) The code for the prediction
-
-
-E) Various:
-AvailableElementsofAST.txt:     Summary of the elements that might appear in histories:
-discussions.txt:                Place for discussions:
-
-
-F) The folders tests_histories and tests_suggest have an own Readme for description of their content
+## READMEs
+There is an README File within each folder describing the contained elements of the folder.
 
 
 
+## Execution:
+The main .sh files are still in this main folder and can be called as demanded in the assignment.
 
-___________
-IMPORTANT: I CHANGED THE JS-CALLGRAPH CODE sothat it immediatly reads the input from the arguments!!!!
-Like this we avoid saving an aditional file just to pass the results of the js_printer to the callgraph.
+> Howto run extract_histories.sh:       	
+-If the file to predict has ? in the tree, you need to pass true as a third argument.
+-Example: 
+~/Desktop/Repository/ProgramAnalysisProject$ ./extract_histories.sh /home/pa/Desktop/Repository/ProgramAnalysisProject/HistoryExtraction/tests_histories/programs.json /home/pa/Desktop/Repository/ProgramAnalysisProject/HistoryExtraction/tests_histories/test
+Leads to:
+<0><57>   <onreadystatechange,0,0,-> <open,0,0,-> <send,0,0,-> 
+<0><50>   <onreadystatechange,0,0,-> <open,0,0,-> <send,0,0,-> 
 
-In asutils.js arround line 100 exchange the function buildAST by the following function:
-    """ function buildAST(files) {
-	source = files[0]
-        var ast = {
-            type: 'ProgramCollection',
-            programs: [],
-            attr: {}
-        };
-        //sources.forEach(function (source) {
-            var prog = esprima.parse(source, { loc: true, range: true });
-            prog.attr = { filename: "inputfile", sloc : sloc(source, "javascript").sloc};
-            ast.programs.push(prog);
-        //});
-        init(ast);
-        ast.attr.sloc = ast.programs
-            .map(function(program){
-                return program.attr.sloc;
-            }).reduce(function(previous, current) {
-            return previous + current;
-        });
-        return ast;
-    } """
+
+
+> Howto run suggest.sh:
+-
+-
